Bug 280067 - KMyMoney displays the [modifed] hint and the 'File'->'Save' action is active when no file is open
Summary: KMyMoney displays the [modifed] hint and the 'File'->'Save' action is active ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-14 11:31 UTC by Cristian Oneț
Modified: 2011-08-21 19:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2011-08-14 11:31:33 UTC
Version:           SVN trunk (using KDE 4.7.0) 
OS:                Linux

Displaying [modified] and the 'File'->'Save' action active is not correct when there is no file open.

Reproducible: Always

Steps to Reproduce:
Run: kmymoney -n

Actual Results:  
[modified] is displayed
'File'->'Save' action is active

Expected Results:  
[modified] is not displayed
'File'->'Save' action is not active

OS: Linux (x86_64) release 2.6.39-gentoo-r3
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Cristian Oneț 2011-08-14 12:23:19 UTC
This is caused by this feature when creating a storage:
http://websvn.kde.org/trunk/extragear/office/kmymoney/kmymoney/views/kmymoneyview.cpp?annotate=1244406&pathrev=1244406#l444

Thomas, any ideas? I could not think of a proper fix.
Comment 2 Thomas Baumgart 2011-08-15 21:12:21 UTC
I'll take care of it
Comment 3 Thomas Baumgart 2011-08-21 08:37:25 UTC
SVN commit 1248518 by tbaumgart:

Create the unique ID only when necessary

BUG: 280067

 M  +19 -0     mymoney/mymoneyfile.cpp  
 M  +13 -0     mymoney/mymoneyfile.h  
 M  +23 -0     mymoney/mymoneyfiletest.cpp  
 M  +1 -0      mymoney/mymoneyfiletest.h  
 M  +1 -1      plugins/kbanking/mymoneybanking.cpp  
 M  +1 -16     views/kmymoneyview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1248518
Comment 4 Cristian Oneț 2011-08-21 19:37:48 UTC
SVN commit 1248712 by conet:

Create the unique ID only when necessary

BUG: 280067

Backported to the stable branch.

 M  +19 -0     mymoney/mymoneyfile.cpp  
 M  +13 -0     mymoney/mymoneyfile.h  
 M  +23 -0     mymoney/mymoneyfiletest.cpp  
 M  +1 -0      mymoney/mymoneyfiletest.h  
 M  +1 -16     views/kmymoneyview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1248712