Create the unique ID only when necessary

BUG: 280067

svn path=/trunk/extragear/office/kmymoney/; revision=1248518